# underpaint

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/app/: main.py  schemas.py
backend/app/pipeline/: __init__.py  encoding.py  lineart.py  loader.py  mixing.py  objects.py  paintbynumber.py  palette.py  planes.py  runner.py  scene.py  segmentation.py  sepia.py
backend/tests/: conftest.py  test_pipeline.py
docs/: README.md
docs/01-vision/: objectif-produit.md
docs/02-architecture/: architecture-generale.md
docs/03-pipeline-image/: pipeline.md
docs/04-peinture/: couleurs-acrylique.md
docs/05-api/: contrat-api.md
docs/06-ressources/: guide-redaction-documentation.md
scripts/: README.md  lint-mermaid.mjs
web/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  api.ts  styles.css
web/src/components/: Dropzone.tsx  PalettePanel.tsx  ResultGallery.tsx
