[project]
name = "painting-backend"
version = "0.1.0"
description = "Pipeline d'analyse d'image pour assistant de peinture"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "pillow>=10.4",
    "numpy>=1.26,<2.2",
    "opencv-python-headless>=4.10",
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "rembg>=2.0.59",
    "onnxruntime>=1.19",
    "huggingface-hub>=0.25",
    "ultralytics>=8.3",
    # Florence-2 (code distant) est incompatible avec transformers >= 4.50
    # (attribut forced_bos_token_id) → on épingle une version compatible.
    "transformers>=4.44,<4.50",
    "timm>=1.0",
    "einops>=0.8",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
